--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -15,15 +15,26 @@
         android:visibility="visible">
 
 
+<!--        <TextView-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_width="match_parent"-->
+<!--            android:text="Details"-->
+<!--            android:gravity="center"-->
+<!--            android:textColor="@color/header_textcolor"-->
+<!--            android:textSize="40dp"-->
+<!--            android:layout_marginTop="20dp"-->
+<!--            style="?android:attr/listSeparatorTextViewStyle"/>-->
+
         <TextView
-            android:layout_height="wrap_content"
+            android:id="@+id/brand"
             android:layout_width="match_parent"
-            android:text="Details"
+            android:layout_height="wrap_content"
+            android:layout_margin="15dp"
+            android:fontFamily="casual"
             android:gravity="center"
-            android:textColor="@color/header_textcolor"
-            android:textSize="40dp"
-            android:layout_marginTop="20dp"
-            style="?android:attr/listSeparatorTextViewStyle"/>
+            android:text="In Your Element Lipstick - Wind"
+            android:textColor="@color/black"
+            android:textSize="34sp" />
 
         <androidx.cardview.widget.CardView
             android:id="@+id/view2"
@@ -31,7 +42,7 @@
             android:layout_height="190dp"
             android:layout_centerHorizontal="true"
             android:layout_gravity="center"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="20dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/imageview_boarder"
             android:elevation="12dp"
@@ -47,23 +58,18 @@
 
                 tools:srcCompat="@drawable/palette" />
         </androidx.cardview.widget.CardView>
+
         <ToggleButton
             android:id="@+id/favorite_toggle_button"
             android:layout_width="24dp"
             android:layout_height="24dp"
-            android:layout_marginBottom="40dp"
-            android:background="@drawable/favorite_button"
+            android:layout_marginBottom="20dp"
+            android:background="@drawable/ic_baseline_add_24"
             android:textOff=" "
             android:textOn=" "
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/product_details_imageview" />
-
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -80,45 +86,25 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
 
-                android:layout_weight="1"
+                android:layout_margin="10dp"
+                android:layout_marginRight="10dp"
                 android:text="@string/brand" />
 
             <TextView
                 android:id="@+id/name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:text="TextView" />
         </LinearLayout>
-
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="10dp"
             android:layout_marginEnd="10dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:id="@+id/product_brand_textview"
-                style="@style/details_texts"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="@string/name" />
-
-            <TextView
-                android:id="@+id/brand"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="TextView" />
-        </LinearLayout>
+            android:orientation="horizontal"/>
 
         <View
             android:id="@+id/divider5"
@@ -138,6 +124,7 @@
                 style="@style/details_texts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:text="@string/price" />
 
@@ -145,12 +132,44 @@
                 android:id="@+id/price"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_weight="1"
                 android:text="TextView" />
         </LinearLayout>
 
         <View
             android:id="@+id/divider7"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="?android:attr/listDivider" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/product_rating_textview"
+                style="@style/details_texts"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="@string/rating" />
+
+            <TextView
+                android:id="@+id/rating"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
+
+        <View
+            android:id="@+id/divider"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
@@ -167,6 +186,7 @@
                 style="@style/details_texts"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_margin="10dp"
                 android:layout_marginRight="50dp"
                 android:text="@string/buy_from_website" />
 
@@ -178,13 +198,38 @@
                 android:backgroundTint="#03FFFFFF"
                 android:src="@drawable/ic_baseline_link_24"
                 android:text="TextView" />
+
         </LinearLayout>
 
         <View
-            android:id="@+id/divider9"
+            android:id="@+id/divider2"
             android:layout_width="match_parent"
             android:layout_height="1dp"
             android:background="?android:attr/listDivider" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginStart="10dp"
+            android:layout_marginEnd="10dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/coproduct_colors_textview"
+                style="@style/details_texts"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:text="@string/colors" />
+
+            <TextView
+                android:id="@+id/colors"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:layout_weight="1"
+                android:text="TextView" />
+        </LinearLayout>
 
     </LinearLayout>
 
