--- a/app/src/main/res/layout/fragment_category_main.xml
+++ b/app/src/main/res/layout/fragment_category_main.xml
@@ -92,7 +92,7 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="center"
-                    android:text="Face"
+                    android:text="@string/face"
                     android:textColor="#000000"
                     android:textSize="24sp"
                     android:textStyle="bold" />
