--- a/app/src/main/res/layout/shopping_bag_item_layout.xml
+++ b/app/src/main/res/layout/shopping_bag_item_layout.xml
@@ -11,8 +11,8 @@
 
     <ImageView
         android:id="@+id/cart_product_imageview"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="100dp"
+        android:layout_height="100dp"
         tools:srcCompat="@tools:sample/avatars" />
 
     <LinearLayout
@@ -36,14 +36,6 @@
             android:layout_height="wrap_content"
             android:layout_marginStart="15dp"
             android:layout_marginBottom="8dp"
-            android:layout_marginEnd="15dp"
-            android:text="TextView" />
-
-        <TextView
-            android:id="@+id/cart_product_quantity_tv"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="15dp"
             android:layout_marginEnd="15dp"
             android:text="TextView" />
 
