--- a/app/src/main/res/layout/products_item_layout.xml
+++ b/app/src/main/res/layout/products_item_layout.xml
@@ -32,6 +32,15 @@
             android:text="TextView" />
 
         <TextView
+            android:id="@+id/price_tv"
+            android:layout_width="wrap_content"
+
+            android:layout_height="wrap_content"
+            android:text="TextView"
+            android:textColor="@color/flat_red_1"
+            android:textSize="16sp" />
+
+        <TextView
             android:id="@+id/list_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
